# Bat-Drone-Software

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
Failsafe/: SeniorDesignArd
capture/: CMakeLists.txt  capture.c
fsw/: CMakeLists.txt  README.md  autonomy.cpp  autonomy.hpp  autonomy2.cpp  autonomy2.hpp  blob.hpp  blobAdjustment.cpp  command_handler.cpp  command_handler.hpp  control.hpp  control_arbiter.cpp  control_arbiter.hpp  control_thread.cpp  control_thread.hpp  drone_controller.cpp  drone_controller.hpp  frame.hpp  frame_grabber.cpp  frame_grabber.hpp  fsw.service  main.cpp  pid_controller.hpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp  telemetry_handler.cpp  telemetry_handler.hpp  triple_buffer.hpp  tripple_buffer.hpp
git-tools/fsw-server-hooks/: post-receive
gse/: CMakeLists.txt  README.md  main.cpp  telemetry_handler.cpp  telemetry_handler.hpp  ui.cpp  ui.hpp
libs/: CMakeLists.txt  README.md
libs/libciaran/: CMakeLists.txt  blob.hpp  ciaran.cpp  ciaran.hpp
libs/libcmdtlm/: CMakeLists.txt  Interface Control Document.md  README.md  cmd_tlm.cpp  cmd_tlm.hpp  cmdtlm.hpp  commands.hpp  packet_accessor.cpp  packet_accessor.hpp  packet_accessor_2.cpp  packet_accessor_2.hpp  packet_element.hpp  packet_elements.cpp  packet_elements.hpp  thread_safe_cmd_tlm.cpp  thread_safe_cmd_tlm.hpp
libs/libhassoun/: CMakeLists.txt
libs/libpt1/: CMakeLists.txt  README.md  pt1.c  pt1.h  pt1_fake.c
libs/libpwm/: CMakeLists.txt  pwm.cpp  pwm.h  pwm.hpp  pwm_fake.cpp  test.cpp
pt1/: CMakeLists.txt  pt1.c
pt1cap/: CMakeLists.txt  README.md  main.c  viewer.c
pt1test/: CMakeLists.txt  pt1test.cxx
